# mu_transformer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  tpu_setup.sh  tpu_sweep.sh
mu_transformer/: data.py  dims.py  launch.py  model.py  shard.py  sow.py  viz.py
mu_transformer/configs/: base.py  base_kevin_approx.py  config_large.py  config_medium.py  config_small.py  config_tiny.py  dm1024.py  dm128.py  dm2048.py  dm256.py  dm4096.py  dm512.py  dm8192.py  huge.py  large.py  medium.py  small.py  tiny.py  v1g0.py  v1g1.py  v1g2.py  v1g3.py  v2g0.py  v2g1.py  v2g2.py  v2g3.py  v3g0.py  v3g1.py  v3g2.py  v3g3.py
mu_transformer/jax_impl/: launch.py  math.py  model.py  samplers.py  sow.py  tree.py
mu_transformer/pytorch_impl/: README.md  launch.py  model.py  sow.py
mu_transformer/viz/: group.py  group_rel.py  single_group.py  table.py  width.py
scripts/: debug.sh  launch.py  run_llama.sh  run_llama_scaling.sh  sweep.sh  sweep_baseline.sh  sweep_baseline_abs.sh  sweep_baseline_smallheads.sh  sweep_baselines.sh  sweep_bf16.sh  sweep_biases.sh  sweep_bsz.sh  sweep_bsz_large.sh  sweep_bsz_small.sh  sweep_combined.sh  sweep_combined_huge.sh  sweep_combined_huge_iwd.sh  sweep_combined_huge_sampling.sh  sweep_combined_huge_validation.sh  sweep_combined_iwd.sh  sweep_combined_no_wd.sh  sweep_cosine.sh  sweep_elhage.sh  sweep_enorm.sh  sweep_ez.sh  sweep_fp32.sh  sweep_gains.sh  sweep_gc.sh  sweep_general.sh  sweep_good.sh  sweep_halfsparse.sh  sweep_hc.sh  sweep_huge_proxy_lr.sh  sweep_huge_proxy_qkscale.sh  sweep_iwd.sh  sweep_lion.sh  sweep_lion_smallheads.sh  sweep_llama.sh  sweep_mqa.sh  sweep_nonlin.sh  (+35 more)
scripts/configs/: config_large.py  config_tiny.py
scripts/group1/: sweep_adam.sh  sweep_lion.sh
scripts/lse_paper/: sweep_bsz_large.sh  sweep_combined.sh  sweep_combined_no_wd.sh  sweep_gains_scalar.sh  sweep_gains_vector.sh  sweep_lion.sh  sweep_mqa.sh  sweep_sp.sh  sweep_swiglu.sh  sweep_uinit.sh
scripts/paper/: sweep_baseline.sh  sweep_baseline_abs.sh  sweep_biases.sh  sweep_bsz_large.sh  sweep_bsz_small.sh  sweep_combined.sh  sweep_combined_dm8192.sh  sweep_combined_dm8192_sampling.sh  sweep_combined_dm8192_validation.sh  sweep_combined_huge.sh  sweep_combined_huge_sampling.sh  sweep_combined_huge_validation.sh  sweep_combined_no_wd.sh  sweep_cosine.sh  sweep_emb_norm.sh  sweep_gains_scalar.sh  sweep_gains_vector.sh  sweep_lion.sh  sweep_lion_abs.sh  sweep_mqa.sh  sweep_qinit.sh  sweep_qkscale.sh  sweep_sp.sh  sweep_sp_simple.sh  sweep_sqrelu.sh  sweep_swiglu.sh  sweep_uinit.sh  sweep_wd_coupled.sh  sweep_wd_indep_n3.sh  sweep_wd_indep_n4.sh  sweep_wd_indep_n5.sh
scripts/rebuttal/: sweep_baseline_d128.sh  sweep_baseline_d32.sh  sweep_baseline_d64.sh  sweep_biases.sh  sweep_bsz_large.sh  sweep_bsz_small.sh  sweep_combined_biglion_iwd.sh  sweep_combined_huge_biglion_iwd.sh  sweep_combined_huge_spuinit.sh  sweep_cosine.sh  sweep_deep.sh  sweep_deep_medium.sh  sweep_deep_small.sh  sweep_elhage.sh  sweep_enorm.sh  sweep_gains.sh  sweep_iwd.sh  sweep_iwd_n3.sh  sweep_iwd_n4.sh  sweep_iwd_n5.sh  sweep_lion_d128.sh  sweep_lion_d32.sh  sweep_lion_d64.sh  sweep_mqa.sh  sweep_qinit.sh  sweep_qkscale_d128.sh  sweep_qkscale_d128_fp32.sh  sweep_qkscale_d128_fp32_nope.sh  sweep_qkscale_d32.sh  sweep_qkscale_d32_fp32.sh  sweep_qkscale_d32_fp32_nope.sh  sweep_qkscale_d64.sh  sweep_qkscale_d64_fp32.sh  sweep_qkscale_d64_fp32_nope.sh  sweep_sqrelu.sh  sweep_swiglu.sh  sweep_uinit.sh  sweep_wd.sh  sweep_wd_zero.sh
src/mu_transformer/: data.py  model.py
tests/: test_model.py
